fix: background size improvement on smaller devices

--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -9,13 +9,13 @@
   padding: 0;
   margin: 0;
 }
-
-@media (prefers-color-scheme: dark) {
+/* disabled temporarly */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -65,4 +65,10 @@ a {
   main {
     width: 1600px;
   }
-} 
+}
+@media screen and (max-width: 600px) {
+  main {
+    background-size: cover;
+    border: none;
+  }
+}
